--- a/clarin.css
+++ b/clarin.css
@@ -1,5 +1,6 @@
 .iWubfS>div,
-.hfYYTL > div{
+.hfYYTL > div,
+.icon-paywall-box>div>div{
     background: rgb(255 60 60)!important;
 }
 ul.contentUser>li.widget-weizenbock,
